--- a/EMV Library/EMV Library.csproj
+++ b/EMV Library/EMV Library.csproj
@@ -2,7 +2,7 @@
   <PropertyGroup>
     <TargetFrameworks>netstandard2.0;net5.0</TargetFrameworks>
     <OutputType>Library</OutputType>
-    <Version>3.2.0.1</Version>
+    <Version>3.3.0</Version>
 
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
 
@@ -10,6 +10,8 @@
 
     <AssemblyName>WSCT.EMV</AssemblyName>
     <RootNamespace>WSCT.EMV</RootNamespace>
+
+    <LangVersion>9</LangVersion>
 
     <Product>WSCT.EMV</Product>
     <Description>EMV Library implementation for WSCT.</Description>
