- update: nuget dependencies (WSCT.Core 6.5.4)
- fix: Issuer Identification Number (IIN) set to 9 250 00
- fix: PAN starts with IIN | 41
- fix: hash in issuer public key certificate
- fix: hash in ICC public key certificate (in progress, static data to be added)

--- a/EMV Issuer Certificate Generation/EMV Issuer Certificate Generation.csproj
+++ b/EMV Issuer Certificate Generation/EMV Issuer Certificate Generation.csproj
@@ -14,6 +14,7 @@
     <RootNamespace>WSCT.EMV.IssuerCertificateGenerationConsole</RootNamespace>
     <OutputType>Exe</OutputType>
     <OutputPath>..\binaries</OutputPath>
+	<LangVersion>8.0</LangVersion>
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\EMV Library\EMV Library.csproj" />
